# skills

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  skills
.claude-plugin/: marketplace.json
.github/scripts/: validate-frontmatter.ts
.github/workflows/: release.yml  validate-frontmatter.yml
ai-scheduler/: .env.scheduler.example  README.md  SKILL.md
ai-scheduler/scripts/: schedule_zoom_and_send_invite.py
apple-calendar-sync/: SETUP.md  SKILL.md
apple-calendar-sync/scripts/: upsert_caldav_event.py
claude-skills/: README.md
codex-skills/: AGENTS.md
codex-skills/ai-scheduler/: .env.scheduler.example  README.md  SKILL.md
codex-skills/ai-scheduler/agents/: openai.yaml
codex-skills/ai-scheduler/scripts/: schedule_zoom_and_send_invite.py
codex-skills/apple-calendar-sync/: .env.calendar.example  SETUP.md  SKILL.md
codex-skills/google-calendar-sync/: .env.calendar.example  SETUP.md  SKILL.md
codex-skills/google-calendar-sync/scripts/: upsert_google_calendar_event.py
google-calendar-sync/: SETUP.md  SKILL.md
google-calendar-sync/scripts/: upsert_google_calendar_event.py
ics-sync/: SKILL.md
ics-sync/scripts/: send_ics_invite.py
plugins/calendar-skills/.claude-plugin/: plugin.json
plugins/calendar-skills/skills/ai-scheduler/: README.md  SKILL.md
plugins/calendar-skills/skills/apple-calendar-sync/: SETUP.md  (+1 more)
plugins/productivity/: README.md
plugins/productivity/.claude-plugin/: plugin.json
plugins/skills/.claude-plugin/: plugin.json
zoom-agentmail-invite/: SKILL.md
zoom-agentmail-invite/agents/: openai.yaml
(+14 files in other folders)
